# desktop-mobile_apps_showcase

./: README.md
kivy/desim/: README.md  conf.ini  main.py  screens.py  utilities.py
kivy/practice_lab/: README.md  pyproject.toml
kivy/practice_lab/lessons/1_base_template/: base_template.py
kivy/ruffier_test/: README.md  main.py
pyqt/smart_notes/: README.md  main.py
